--- a/app/views/item_purchases/index.html.erb
+++ b/app/views/item_purchases/index.html.erb
@@ -13,8 +13,8 @@
           <%= @item.title %>
         </h2>
         <div class='buy-item-price'>
-          <p class='item-price-text'>¥<%= '999,999,999' %></p>
-          <p class='item-price-sub-text'><%= '配送料負担' %></p>
+          <p class='item-price-text'>¥<%= @item.price %></p>
+          <p class='item-price-sub-text'><%= ShipFormArea.find(@item.ship_form_area_id)[:name] %></p>
         </div>
       </div>
     </div>
