--- a/app/views/item_purchases/index.html.erb
+++ b/app/views/item_purchases/index.html.erb
@@ -14,7 +14,7 @@
         </h2>
         <div class='buy-item-price'>
           <p class='item-price-text'>¥<%= @item.price %></p>
-          <p class='item-price-sub-text'><%= ShipFormArea.find(@item.ship_form_area_id)[:name] %></p>
+          <p class='item-price-sub-text'><%= @item.ship_form_area.name %></p>
         </div>
       </div>
     </div>
