--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -143,7 +143,7 @@
                 <%= item.title %>
               </h3>
               <div class='item-price'>
-                <span><%= item.price %>円<br><%= ShipFormArea.find(item.ship_form_area_id)[:name] %></span>
+                <span><%= item.price %>円<br><%= item.ship_form_area.name %></span>
                 <div class='star-btn'>
                   <%= image_tag "star.png", class:"star-icon" %>
                   <span class='star-count'>0</span>
