--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -26,14 +26,16 @@
       </span>
     </div>
 
-    <% if user_signed_in? && current_user.id == @item.user_id && @item.item_purchase.blank? %>
-      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
-      <p class="or-text">or</p>
-      <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-    <% elsif user_signed_in? && @item.item_purchase.blank? %>
+    <% if user_signed_in? && @item.item_purchase == nil %>
+      <% if current_user.id == @item.user_id %>
+        <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
+        <p class="or-text">or</p>
+        <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
+      <% else %>
       <%# 商品が売れていない場合はこちらを表示 %> 
         <%= link_to "購入画面に進む", item_purchases_path ,class:"item-red-btn"%>
-    <% end %>
+      <% end %>
+     <% end %>
 
     <div class="item-explain-box">
       <span><%= @item.description %></span>
