--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,7 +7,9 @@
       <%= @item.title %>
     </h2>
     <div class="item-img-content">
-      <%= image_tag @item.image, class:"item-box-img" %>
+      <% @item.images.each do |image| %>
+        <%= image_tag image, class:"item-img" %>
+      <% end %>
 
    <%# 商品が売れている場合は、sold outを表示 %>
       <% if @item.item_purchase.present? %>
