--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -12,18 +12,23 @@ app/assets/stylesheets/items/new.css %>
     <%= render 'shared/error_messages', model: f.object %>
 
     <%# 出品画像 %>
-    <div class="img-upload">
-      <div class="weight-bold-text">
-        出品画像
-        <span class="indispensable">必須</span>
-      </div>
-      <div class="click-upload">
-        <p>
-          クリックしてファイルをアップロード
-        </p>
-        <%= f.file_field :image, id:"item-image" %>
-      </div>
+  <div class="img-upload">
+    <div class="weight-bold-text">
+      出品画像
+      <span class="indispensable">必須</span>
     </div>
+    <div class="click-upload">
+      <p>
+        クリックしてファイルをアップロード
+      </p>
+      <%= f.file_field :images, name: 'item[images][]', id:"item-image" %>
+    </div>
+  </div>
+  <div id="image-list"></div>
+
+  <% @item.images.each do |image| %>
+    <%= image_tag image, class: 'images' %>
+  <% end %>
     <%# /出品画像 %>
     <%# 商品名と商品説明 %>
     <div class="new-items">
