--- a/app/views/item_purchases/index.html.erb
+++ b/app/views/item_purchases/index.html.erb
@@ -29,7 +29,7 @@
         支払金額
       </h1>
       <p class='item-payment-price'>
-        ¥<%= @item.price %>
+        <%= @item.price %>
       </p>
     </div>
     <%# /支払額の表示 %>
